@@ -240,12 +240,13 @@
 	  </child>
 
 	  <child>
-	    <widget class="GtkCheckMenuItem" id="full_view1">
+	    <widget class="GtkRadioMenuItem" id="full_view1">
 	      <property name="visible">True</property>
 	      <property name="label" translatable="yes">_Full screen</property>
 	      <property name="use_underline">True</property>
 	      <property name="active">False</property>
-	      <signal name="activate" handler="on_full_screen1_activate"/>
+	      <property name="group">normal_view1</property>
+	      <signal name="activate" handler="on_full_view1_activate"/>
 	    </widget>
 	  </child>
 	</widget>
@@ -354,7 +355,7 @@
 	      <accelerator key="H" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image38">
+		<widget class="GtkImage" id="image42">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-help</property>
 		  <property name="icon_size">1</property>
@@ -377,7 +378,7 @@
 	      <accelerator key="M" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image39">
+		<widget class="GtkImage" id="image43">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-index</property>
 		  <property name="icon_size">1</property>
@@ -468,7 +469,7 @@
 	      <signal name="activate" handler="on_bugreport1_activate" last_modification_time="Sun, 20 Feb 2005 17:58:57 GMT"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image40">
+		<widget class="GtkImage" id="image44">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-execute</property>
 		  <property name="icon_size">1</property>
