@@ -127,9 +127,13 @@ will run it at the maximum the CPU is capable.<br>
 - <span style="font-style: italic;">HW protection</span> : if checked,
 the HW protection device is enabled and emulated. TiEmu need to be
 restarted (or an image to be load) for changes to take effect.<br>
-- <span style="font-style: italic;">normal view</span>, <span
- style="font-style: italic;">large view</span>, <span
- style="font-style: italic;">full screen</span> : not implemented yet. <br>
+- <span style="font-style: italic;">normal view</span> : display skin
+and/or lcd with a 1x ratio,<br>
+- <span style="font-style: italic;">large view</span> : same with 2x
+ratio (note: until I fix this, it's CPU intensive),<br>
+- <span style="font-style: italic;">full screen</span> : display LCD
+only and make it fit the screen (note: until I fix this, it's limited
+to 3x ratio because excessively CPU intensive). <br>
 <br>
 <span style="font-style: italic;">Skin for current calc</span> : <span
  style="font-style: italic;">none</span>, <span
